--- a/manuscript/Chapter3.Rmd
+++ b/manuscript/Chapter3.Rmd
@@ -1,16 +1,16 @@
 ---
 title: 'Chapter 3: Fundamental Analysis and the Balence Sheet'
-output: 
-  html_document:
-    toc: true
-    theme: readable
+output: md_document
+  
 bibliography: PriceAnalysis.bib
 csl: american-journal-of-agricultural-economics.csl.txt
 comment: Copyright Mindy L. Mallory 2015
 ---
 
 
-
+html_document:
+    toc: true
+    theme: readable
 
 
 
