--- a/manuscript/Chapter1.Rmd
+++ b/manuscript/Chapter1.Rmd
@@ -1,25 +1,26 @@
 ---
 title: "Chapter 1"
-author: "Mindy Mallory"
-date: "July 17, 2015"
 output:  md_document
-    
 bibliography: PriceAnalysis.bib
 csl: american-journal-of-agricultural-economics.csl.txt
 ---
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+# Chapter 1: Introduction
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+## What is a Commodity
 
-```{r}
-summary(cars)
-```
+## Storable and Nonstorable Commodities
 
-You can also embed plots, for example:
+## Commodity Prices
 
-```{r, echo=FALSE}
-plot(cars)
-```
+### Role in Determining Farm Income
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+### Value of Exports
+
+### Consumer Expenditure on Food
+
+## Price Analysis versus Forecasting
+
+## Forecasting Principles
+
+## Long Term Agricultural Price Trends
