--- a/manuscript/Preface.Rmd
+++ b/manuscript/Preface.Rmd
@@ -7,6 +7,6 @@ I am writing *Commodity Price Analysis: Understand and Produce Market Commentary
 
 I am releasing these books while they are very early in development. Partly because the Lean Publishing model of 'Publish Early, Publish Often' (with reader feedback) appeals to me. Another concern is purely practical. I want to use this book for classes in Fall 2015 and chapters will be finished only shortly before I assign readings and exercises. Because the book is in its early development stage, expect typos and other errors in the books. Knowing this, I am releasing the book for free, at least through December. During this time I will be rapidly releasing updates to keep up with my course. 
 
-I am eager to hear reader feedback about the structure and scope of the books; I will appreciate any feedback you have. If you find errors, please alert me via the [Leanpub](http://leanpub.com). 
+I am eager to hear reader feedback about the structure and scope of the books; I will appreciate any feedback you have. If you find errors, please alert me via the [Leanpub](http://leanpub.com) website. 
 
 Mindy Mallory
