--- a/manuscript/Chapter2.RMD
+++ b/manuscript/Chapter2.RMD
@@ -15,11 +15,11 @@ This chapter serves as an introduction to real-time and historical data sources,
 The best way to learn commodity price analysis is to listen to the professionals who provide commentary on the markets on a regular basis. Land grant universities located in major commodity producing states all have components of their outreach programs dedicated to market commentary. The University of Illinois' web extension program, FARMDOC, is particularly good. Also, public radio in major commodity producing areas has excellent coverage. Champaign-Urbana's WILL, and Iowa Public Televisions' Market to Market are very good. There are *many* other great sources providing regular commentary, but this will get the reader started. 
 
 
-\|Outlet    |  Description      | Link   | 
-\|:---------|:------------------|:----------------|  
-\|Farmdoc Daily | Extension web presence by the department of ACE | [farmdocdaily.illinois.edu](http://farmdocdaily.illinois.edu) | 
-\|WILL Agriculture | WILL  and the University of Illinois Extension | [will.illinois.edu/agriculture](http://will.illinois.edu/agriculture) | 
-\|Market to Market | Agricultural programming by Iowa Public Television | [www.iptv.org/mtom/](http://www.iptv.org/mtom/) |  
+\|Outlet    |  Description      | Link   | \
+\|:---------|:------------------|:----------------|  \
+\|Farmdoc Daily | Extension web presence by the department of ACE | [farmdocdaily.illinois.edu](http://farmdocdaily.illinois.edu) | \
+\|WILL Agriculture | WILL  and the University of Illinois Extension | [will.illinois.edu/agriculture](http://will.illinois.edu/agriculture) | \
+\|Market to Market | Agricultural programming by Iowa Public Television | [www.iptv.org/mtom/](http://www.iptv.org/mtom/) |  \
 \
 \: Table 1. Resources for Commodity Market Commentary
 
