--- a/manuscript/Chapter2.RMD
+++ b/manuscript/Chapter2.RMD
@@ -1,11 +1,13 @@
 ---
 title: "Chapter 2"
-output:  md_document
+output:  
+    html_document:
+        toc: true
 bibliography: PriceAnalysis.bib
 csl: american-journal-of-agricultural-economics.csl.txt
 ---
 
-#Chapter 2: Getting Started
+# Chapter 2: Getting Started
     
 This chapter serves as an introduction to real-time and historical data sources, as well as an introduction to the analysts that conduct price analysis professionally and help us make sense of commodity prices. First, we will introduce the reader to some entities that provide market commentary and price analysis. Next, we will provide a very brief introduction to futures markets as the source of real-time price information for commodities. This section also covers where and how to obtain current futures price quotes. In the section that follows we cover sources for historical data such as the United States Department of Agriculture and others. These sources will be useful in developing fundamental price models in later chapters. The goal of this chapter is to get the reader up to speed on where to get commodity price data and reading the professional analysis daily. The more you follow commodity markets, the more you learn. Absorb the insights of the professionals who live and breath commodity markets every day, and you will begin to have a feel for what price analysis is all about and how it works.    
 
@@ -15,13 +17,13 @@ This chapter serves as an introduction to real-time and historical data sources,
 The best way to learn commodity price analysis is to listen to the professionals who provide commentary on the markets on a regular basis. Land grant universities located in major commodity producing states all have components of their outreach programs dedicated to market commentary. The University of Illinois' web extension program, FARMDOC, is particularly good. Also, public radio in major commodity producing areas has excellent coverage. Champaign-Urbana's WILL, and Iowa Public Televisions' Market to Market are very good. There are *many* other great sources providing regular commentary, but this will get the reader started. 
 
 
-\|Outlet    |  Description      | Link   | \
-\|:---------|:------------------|:----------------|  \
-\|Farmdoc Daily | Extension web presence by the department of ACE | [farmdocdaily.illinois.edu](http://farmdocdaily.illinois.edu) | \
-\|WILL Agriculture | WILL  and the University of Illinois Extension | [will.illinois.edu/agriculture](http://will.illinois.edu/agriculture) | \
-\|Market to Market | Agricultural programming by Iowa Public Television | [www.iptv.org/mtom/](http://www.iptv.org/mtom/) |  \
-\
-\: Table 1. Resources for Commodity Market Commentary
+|Outlet    |  Description      | Link   | 
+|:---------|:------------------|:----------------|  
+|Farmdoc Daily | Extension web presence by the department of ACE | [farmdocdaily.illinois.edu](http://farmdocdaily.illinois.edu) | 
+|WILL Agriculture | WILL  and the University of Illinois Extension | [will.illinois.edu/agriculture](http://will.illinois.edu/agriculture) | 
+|Market to Market | Agricultural programming by Iowa Public Television | [www.iptv.org/mtom/](http://www.iptv.org/mtom/) |  
+
+: Table 1. Resources for Commodity Market Commentary
 
 ## Futures Contracts as Sources of Real-time Price Information
 
@@ -38,17 +40,17 @@ Real-time (10-min delay) data can be obtained directly from the CME Group's webs
 
 Contracts for several different expiry dates trade at the same time. There is a useful shorthand for finding contracts for a specific commodity and expiration month that varies only slightly among data vendors; all follow a general convention for building futures ticker symbols customizing only to meet the needs of their individual systems. The table below lists selected grain and oilseed, livestock, and energy contract symbols, expiration symbols, and common ticker formats used to search for price quotes. For example, the first row of the table illustrates that the general convention for representing the CBOT corn futures contract expiring in December of 2015 is CZ15. The first letter represents the commodity symbol, C for corn; the second letter represents the expiration month, Z for December; and the final two numerals represent the year of expiry, 15 for 2015. 
 
-{title="Table 2. Conventions for Building Futures Contract Ticker Symbols for Selected Commodities"} \
-
-|Commodity   | Symbol    |  Expiration Months and Symbol                            | General Ticker         | Yahoo Finance Ticker  | \
-|:----------|:---------:|:--------------------------------------------------------|:----------------------|:---------------------| \
-| Corn       | C         |March (H), May (K), July (N), September (U), December (Z) | CZ15, December 2015 Corn| \ [CZ15.cbt](http://finance.yahoo.com/q;_ylt=Aq08zZO8Y0A5GdeM2aZSNJJ.FJF4?uhb=uhb2&fr=uh3_finance_vert_gs&type=2button&s=cz15.cbt)| \
-| Soybeans   | S         |January (F), March (H), May (K), July (N), August (Q), September (U), November (X) | SX15, November 2015 Soybean| \ [SX15.cbt](http://finance.yahoo.com/q;_ylt=Ajq44ku8k3rd1HzDOLpIozEnv7gF?uhb=uhb2&fr=uh3_finance_vert_gs&type=2button&s=sx15.cbt) | \
-| SRW Wheat  | W         |March (H), May (K), July (N), September (U), December (Z) | WZ15, December 2015 SRW Wheat| \ [WZ15.cbt](http://finance.yahoo.com/q;_ylt=Ajq44ku8k3rd1HzDOLpIozEnv7gF?uhb=uhb2&fr=uh3_finance_vert_gs&type=2button&s=wz15.cbt) | \
-| Lean Hogs | HE         | Feb (G), Apr (J), May (K), Jun (M), Jul (N), Aug (Q), Oct (V), Dec (Z) | HEZ15, December 2015 Lean Hogs| \ [HEZ15.cme](http://finance.yahoo.com/q;_ylt=Ajq44ku8k3rd1HzDOLpIozEnv7gF?uhb=uhb2&fr=uh3_finance_vert_gs&type=2button&s=HEZ15.CME%2C) | \
-| Crude Oil | CL         | All months | CLU15, September 2015 Light Sweet Crude Oil| \ [CLU15.nym](http://finance.yahoo.com/q;_ylt=Ajq44ku8k3rd1HzDOLpIozEnv7gF?uhb=uhb2&fr=uh3_finance_vert_gs&type=2button&s=clu15.nym) | \
 
 
+|Commodity   | Symbol    |  Expiration Months and Symbol                            | General Ticker         | Yahoo Finance Ticker  | Quandl Ticker
+|:----------|:---------:|:--------------------------------------------------------|:----------------------|:---------------------|:---------------------| 
+| Corn       | C         |March (H), May (K), July (N), September (U), December (Z) | CZ15, December 2015 Corn|  [CZ15.cbt](http://finance.yahoo.com/q;_ylt=Aq08zZO8Y0A5GdeM2aZSNJJ.FJF4?uhb=uhb2&fr=uh3_finance_vert_gs&type=2button&s=cz15.cbt)| [CME/CZ2015](https://www.quandl.com/data/CME/CZ2015-Corn-Futures-December-2015-CZ2015) |
+| Soybeans   | S         |January (F), March (H), May (K), July (N), August (Q), September (U), November (X) | SX15, November 2015 Soybean|  [SX15.cbt](http://finance.yahoo.com/q;_ylt=Ajq44ku8k3rd1HzDOLpIozEnv7gF?uhb=uhb2&fr=uh3_finance_vert_gs&type=2button&s=sx15.cbt) | [CME/SX2015](https://www.quandl.com/data/CME/SX2015-Soybean-Futures-November-2015-SX2015) |
+| SRS Wheat  | W         |March (H), May (K), July (N), September (U), December (Z) | WZ15, December 2015 SRW Wheat|  [WZ15.cbt](http://finance.yahoo.com/q;_ylt=Ajq44ku8k3rd1HzDOLpIozEnv7gF?uhb=uhb2&fr=uh3_finance_vert_gs&type=2button&s=wz15.cbt) | [CME/WZ2015](https://www.quandl.com/data/CME/WZ2015-Wheat-Futures-December-2015-WZ2015) |
+| Lean Hogs | HE         | Feb (G), Apr (J), May (K), Jun (M), Jul (N), Aug (Q), Oct (V), Dec (Z) | HEZ15, December 2015 Lean Hogs|  [HEZ15.cme](http://finance.yahoo.com/q;_ylt=Ajq44ku8k3rd1HzDOLpIozEnv7gF?uhb=uhb2&fr=uh3_finance_vert_gs&type=2button&s=HEZ15.CME%2C) | [CME/LNZ2015](https://www.quandl.com/data/CME/LNZ2015-Lean-Hog-Futures-December-2015-LNZ2015) |
+| Crude Oil | CL         | All months | CLU15, September 2015 Light Sweet Crude Oil|  [CLU15.nym](http://finance.yahoo.com/q;_ylt=Ajq44ku8k3rd1HzDOLpIozEnv7gF?uhb=uhb2&fr=uh3_finance_vert_gs&type=2button&s=clu15.nym) | [CME/CLU2015](https://www.quandl.com/data/CME/CLU2015-Crude-Oil-Futures-September-2015-CLU2015)|
+
+: Table 2. Conventions for Building Futures Contract Ticker Symbols for Selected Commodities
 
 While every market participant needs to know the current price, forecasting and decision making requires the study of historical prices and other important market variables. Historical futures price data is available for free and from subscription based services from [Quandl](https://quandl.com) and [Barchart](https://barchart.com) mentioned in the paragraph above. Historical [futures price data](http://farmdoc.agricharts.com/markets/historic.php) and [average price recieved](http://www.farmdoc.illinois.edu/manage/pricehistory/price_history.html) is also available from [farmdoc](http://www.farmdoc.illinois.edu), the online extension presence of the University of Illinois' [Agricultural and Consumer Economics](http://ace.illinois.edu/) department. 
 
@@ -60,19 +62,19 @@ The United States Department of Agriculture has a long history of extensively su
 
 Prospective Plantings
 
-: The Prospective Plantings report is an estimate of grower intentions for planted acres during the first two weeks of March. The report is released on the last day of March every year. Planted acres for each crop varies considerably from year-to-year and this report give the market important guidance about expected supply of the covered commodities. The most important reason prospective plantings change from year-to-year is the relative prices of crops that compete for acres. Growers look to the prices of futures with a expiry around the time of harvest for an estimate of expected profit from planting competing crops. For example, if the price of corn is relatively high compared to soybeans, and expected profitability from an acre of corn is higher than from an acre of soybeans, the farmer is likely to shift some of his planting intentions from soybeans to corn compared to the crop mix typically planted. In this case you might hear market commentary include language like, "... corn is bidding for acres." Meaning that price of corn is trying to entice growers to shift acres into corn production.
+:    The Prospective Plantings report is an estimate of grower intentions for planted acres during the first two weeks of March. The report is released on the last day of March every year. Planted acres for each crop varies considerably from year-to-year and this report give the market important guidance about expected supply of the covered commodities. The most important reason prospective plantings change from year-to-year is the relative prices of crops that compete for acres. Growers look to the prices of futures with a expiry around the time of harvest for an estimate of expected profit from planting competing crops. For example, if the price of corn is relatively high compared to soybeans, and expected profitability from an acre of corn is higher than from an acre of soybeans, the farmer is likely to shift some of his planting intentions from soybeans to corn compared to the crop mix typically planted. In this case you might hear market commentary include language like, "... corn is bidding for acres." Meaning that price of corn is trying to entice growers to shift acres into corn production.
 
 Acreage
 
-: While the Prospective Plantings Report estimates growers' *intentions* to plant, Acreage is an estimate of the acres actually planted. This report is based on surveys conducted during the first two weeks of June and released on the last day of June. Weather and changes in the relative price of crops that compete for acres are the most important reason for differences between Prospective Plantings and Acreage reports. Weather can play a factor becasue crops that compete for acres are not nessessarily planted at the same time. Corn, for example, is typically planted a few months before soybeans. The Corn Belt, where the biggest production of corn and soybeans occur, can often be very wet in the Spring. In some years this makes is physically very difficult to get to plant the number of acres of corn they intended when surveyed during the first two weeks of March. The relative price of crops competing for acres can also change between March and June for any number of reasons and cause the Acreage report to be substantially different than Prospective Plantings.     
+:    While the Prospective Plantings Report estimates growers' *intentions* to plant, Acreage is an estimate of the acres actually planted. This report is based on surveys conducted during the first two weeks of June and released on the last day of June. Weather and changes in the relative price of crops that compete for acres are the most important reason for differences between Prospective Plantings and Acreage reports. Weather can play a factor becasue crops that compete for acres are not nessessarily planted at the same time. Corn, for example, is typically planted a few months before soybeans. The Corn Belt, where the biggest production of corn and soybeans occur, can often be very wet in the Spring. In some years this makes is physically very difficult to get to plant the number of acres of corn they intended when surveyed during the first two weeks of March. The relative price of crops competing for acres can also change between March and June for any number of reasons and cause the Acreage report to be substantially different than Prospective Plantings.     
 
 Grain Stocks
 
-: The Grain Stocks report is issued quarterly and contains information about how much of selected commodities are in storage in the United States, by state. Information in this report is pertinent to the price level, as well as the calendar spread between two futures maturities. When stocks are tight, naturally the price of the commodity will be high. Also, prices futures contracts soon to expire should exceed those with longer dated maturities for two reasons. 1) Low prices for distant futures contracts reflects the tendency for high prices to ration demand and for future harvests to resolve shortages. 2) Low prices for distant futures contracts should disincentivize storage and bring stocks onto the market to relieve current shortages. Thus, this report is important both for price level and spread analysis. 
+:    The Grain Stocks report is issued quarterly and contains information about how much of selected commodities are in storage in the United States, by state. Information in this report is pertinent to the price level, as well as the calendar spread between two futures maturities. When stocks are tight, naturally the price of the commodity will be high. Also, prices futures contracts soon to expire should exceed those with longer dated maturities for two reasons. 1) Low prices for distant futures contracts reflects the tendency for high prices to ration demand and for future harvests to resolve shortages. 2) Low prices for distant futures contracts should disincentivize storage and bring stocks onto the market to relieve current shortages. Thus, this report is important both for price level and spread analysis. 
 
 World Agricultural Supply and Demand Estimates (WASDE)
 
-: The WASDE report is released monthly and provides the USDA's forecasts for U.S. and world supply and use balence sheets for grains, soybeans and its products, and cotton. It contains supply and use forecasts for U.S. sugar and livestock commodities. These reports are among the most important and eagerly anticipated by market participants. The report is currently released at 12pm EST and release of the report commonly results in limit price moves in futures markets. It is among the most involved to prepare. To quote the USDA's own documentation: 
+:    The WASDE report is released monthly and provides the USDA's forecasts for U.S. and world supply and use balence sheets for grains, soybeans and its products, and cotton. It contains supply and use forecasts for U.S. sugar and livestock commodities. These reports are among the most important and eagerly anticipated by market participants. The report is currently released at 12pm EST and release of the report commonly results in limit price moves in futures markets. It is among the most involved to prepare. To quote the USDA's own documentation: 
 
 
 
@@ -91,30 +93,33 @@ Given the USDA reports' ability to move futures markets, the lock up condition d
 
 Crop Production
 
-: The Crop Production report includes estimates of yeild, acres harvested, and total production for covered commodities. This report is released in tandem with the WASDE report.
+:    The Crop Production report includes estimates of yeild, acres harvested, and total production for covered commodities. This report is released in tandem with the WASDE report.
 
 Crop Progess and Condition
 
-: Crop Progress and Condition reports are issued every Monday during the planting, growing, and harvest season for major crops in the United States. The weekly updates provide market participants critical information about the status of the crop. Nass surveys approximately 4,000 individuals in major growing areas familar with the crops. Check out one of the weekly tables [August 3, 2015](http://usda.mannlib.cornell.edu/usda/current/CropProg/CropProg-08-03-2015_correction.pdf) and summary charts [US Progress and Condition](http://www.nass.usda.gov/Charts_and_Maps/Crop_Progress_&_Condition/2015/US_2015.pdf)
+:    Crop Progress and Condition reports are issued every Monday during the planting, growing, and harvest season for major crops in the United States. The weekly updates provide market participants critical information about the status of the crop. Nass surveys approximately 4,000 individuals in major growing areas familar with the crops. Check out one of the weekly tables [August 3, 2015](http://usda.mannlib.cornell.edu/usda/current/CropProg/CropProg-08-03-2015_correction.pdf) and summary charts [US Progress and Condition](http://www.nass.usda.gov/Charts_and_Maps/Crop_Progress_&_Condition/2015/US_2015.pdf)
+
+Agricultural Marketing Service
+
+:    The AMS provides numerous daily and weekly reports related to regional prices and exports. 
 
 ### USDA Data Sources
 
-All of the information contained in the reports described above are useful for in depth analysis over a long time horizon. As a service the USDA maintains databases of information contained in historical reports that are easy to query for analysis. Three important agencies maintaining databases within the USDA are the [National Agricultural Statistics Service](http://www.nass.usda.gov/) (NASS), the [Foreign Agricultural Service](http://apps.fas.usda.gov/psdonline/psdHome.aspx) (FAS), and the [Economics Research Service](http://www.ers.usda.gov/data-products.aspx) (ERS). Each service mentioned here hosts a wide variety of data and analyses, so concise descriptions are difficult. However some of the data products commonly used for commodity price analysis are ACRES PLANTED, PRODUCTION, YIELD, and PRICE RECIEVED by NASS; the PRODUCTION SUPPLY AND DISTRIBUTION report from FAS (much of the WASDE report is archived here); and COST and RETURNS from ERS. 
+All of the information contained in the reports described above are useful for in depth analysis over a long time horizon. As a service the USDA maintains databases of information contained in historical reports that are easy to query for analysis. Four important agencies maintaining databases within the USDA are the [National Agricultural Statistics Service](http://www.nass.usda.gov/) (NASS), the [Foreign Agricultural Service](http://apps.fas.usda.gov/psdonline/psdHome.aspx) (FAS), the [Economics Research Service](http://www.ers.usda.gov/data-products.aspx) (ERS), and the [Agricultural Marketing Service](http://www.ams.usda.gov/market-news/livestock-poultry-grain#Grain). Each service mentioned here hosts a wide variety of data and analyses, so concise descriptions are difficult. However some of the data products commonly used for commodity price analysis are ACRES PLANTED, PRODUCTION, YIELD, and PRICE RECIEVED by NASS; the PRODUCTION SUPPLY AND DISTRIBUTION report from FAS (much of the WASDE report is archived here); COST and RETURNS from ERS; and local prices from AMS. 
 
+|Report                | Link                                                                                                             | 
+|:---------------------|:-----------------------------------------------------------------------------------------------------------------| 
+|Prospective Plantings | [Farmers' planting intentions ](http://usda.mannlib.cornell.edu/MannUsda/viewDocumentInfo.do?documentID=1136)    |   
+|Acreage               | [Planted Acres](http://usda.mannlib.cornell.edu/MannUsda/viewDocumentInfo.do?documentID=1000)                    | 
+|WASDE                 | [World Supply and Demand Estimates](http://usda.mannlib.cornell.edu/MannUsda/viewDocumentInfo.do?documentID=1194)| 
+|Crop Production       | [Crop Production - Acres and Yield](http://usda.mannlib.cornell.edu/MannUsda/viewDocumentInfo.do?documentID=1046)| 
+|Crop Progress       | [Crop Progress](http://www.nass.usda.gov/Publications/National_Crop_Progress/)| 
+|NASS               | [http://www.nass.usda.gov/](http://www.nass.usda.gov/)                                   | 
+|FAS                | [http://www.fas.usda.gov/data](http://www.fas.usda.gov/data)                             | 
+|ERS                | [http://www.ers.usda.gov](http://www.ers.usda.gov/data-products.aspx) | 
+|AMS                | [http://www.ams.usda.gov/](http://www.ams.usda.gov/market-news/livestock-poultry-grain#Grain)
 
- 
-{title="Table 3. Summary of USDA Reports and Data Sources"} \
-
-|Report                | Link                                                                                                             | \
-|:---------------------|:-----------------------------------------------------------------------------------------------------------------| \
-|Prospective Plantings | [Farmers' planting intentions ](http://usda.mannlib.cornell.edu/MannUsda/viewDocumentInfo.do?documentID=1136)    |   \
-|Acreage               | [Planted Acres](http://usda.mannlib.cornell.edu/MannUsda/viewDocumentInfo.do?documentID=1000)                    | \
-|WASDE                 | [World Supply and Demand Estimates](http://usda.mannlib.cornell.edu/MannUsda/viewDocumentInfo.do?documentID=1194)| \
-|Crop Production       | [Crop Production - Acres and Yield](http://usda.mannlib.cornell.edu/MannUsda/viewDocumentInfo.do?documentID=1046)| \
-|Crop Progress       | [Crop Progress](http://www.nass.usda.gov/Publications/National_Crop_Progress/)| \
-|NASS               | [http://www.nass.usda.gov/](http://www.nass.usda.gov/)                                   | \
-|FAS                | [http://www.fas.usda.gov/data](http://www.fas.usda.gov/data)                             | \
-|ERS                | [http://www.ers.usda.gov/data-products.aspx](http://www.ers.usda.gov/data-products.aspx) | \
+: Table 3. Summary of USDA Reports and Data Sources
 
 ## Conclusion 
 
