--- a/manuscript/Chapter3.Rmd
+++ b/manuscript/Chapter3.Rmd
@@ -11,18 +11,20 @@ comment: Copyright Mindy L. Mallory 2015
 
 # Introduction
 
-Fundamental analysis is an assessment of price based on the underlying supply and demand factors. Focusing on changes in the relationship between supply and demand allows one to calibrate informed opinion of the value of the commodity. If one considers the theory of supply and demand, the main role of the market is to find the value at which supply equals demand - or in other words, the value that 'clears the market'. 
+Fundamental analysis is an assessment of price based on underlying supply and demand factors. Focusing on changes in the relationship between supply and demand allows one to calibrate an informed opinion of the value of the commodity. If one considers the theory of supply and demand, the main role of the market is to find the value at which supply equals demand - or in other words, the value that 'clears the market'. 
 
-At this point we may as well call the 'fundamental value' a forecast or expectation of the market clearing price. The goal of any forecasting exercise is to compare the forecast (estimated fundamental value) to the current market price and make decisions accordingly. 
+The estimated 'fundamental value' is simply a forecast, or expectation of, the market clearing price. The goal of any forecasting exercise is to compare the forecast (estimated fundamental value) to the current market price and make decisions accordingly. 
 
 > Bullish:  `Forecast > Price` \
 > Bearish: `Forecast < Price` 
 
 <a title="By Thomas Richter/user:THOMAS (Own work) [GFDL (http://www.gnu.org/copyleft/fdl.html) or CC-BY-SA-3.0 (http://creativecommons.org/licenses/by-sa/3.0/)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File%3ABull_and_bear.jpg"><img width="128" alt="Bull and bear" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/Bull_and_bear.jpg/128px-Bull_and_bear.jpg"/></a>                
 
+If your forecast is above the current market price, that is bullish because your forecast says the market is undervalueing the commodity - an opportunity to buy low and sell high! If your forecast is below the current market price, that is bearish becasue your forecast says the market is overvalueing the commodity - an opportunity to sell high and buy low! This of course only works if your forecast is correct, that is, the market eventually agrees and moves into line with your forecast. 
+
 # Supply and Demand
 
-When conducing a fundamental analysis it is key to keep in mind key factors that determine supply and demand and ultimately prices. Recall the basic supply and demand figures from chapter 1. They are the basic theoretical framework that will guild all of our modeling decisions. For grain markets we had two models: preplanting and post planting. 
+When conducing a fundamental analysis one does their best to take into account all the factors that determine supply, demand, and ultimately prices. Recall the basic supply and demand figures from chapter 1. They are the basic theoretical framework that will guild all of our modeling decisions. For grain markets we had two models: preplanting and post planting. 
 
 % Figures Here
 
@@ -33,31 +35,33 @@ When conducing a fundamental analysis it is key to keep in mind key factors that
   - Pre-Plant Weather 
 - Yield
   - Post-Plant Weather
-- Carryover Stocks
+
+
   
 **Demand is Affected by:**
 
-- Consumer Income
+- Consumer Income (this includes foreign income, since exports are a big compoent of demand)
 - Exchange Rates
 - Government Policies
 - Foreign Production
 
+
 Acreage 
 
-:    Prior to planting the quantity of planted acres is a huge determinant of production and baseline supply for the marketing year. Before planting, farmers must plan how much acreage to devote to each commodity. In the Corn Belt, the relative prices of corn and soybeans play a large role. If futures prices indicate planting soybeans will be more profitable than planting corn, farmers will plan to devote more acres than usual to soybeans, for example. Weather is a key factor as well. The most ardent planting intentions of a farmer can be derailed by weather. An unusually rainy planting season can reduce planted acres from intentions. Planting intentions can change rapidly based on price as well. If the relative prices of competing commodities change rapidly before planting is complete, acreage devoted to each commodity can be affected. This is all to say that before the crop is actually in the ground, the supply of grain is relatively elastic. 
+:    Before planting, farmers plan how much acreage to devote to each commodity, thus determining the baseline expected production level. Before summer weather is revealed, expected production is simply `Acreage X Trend Yield`. In the Corn Belt, the relative prices of corn and soybeans play a large role in the farmer's decision. If futures prices indicate planting soybeans will be more profitable than planting corn, farmers will plan to devote more acres than usual to soybeans, for example. Weather can be an imporant determinant of acreage decisions as well. The most ardent planting intentions of a farmer can be derailed by persistent wet weather. An unusually rainy planting season can reduce planted acres from intentions. This is all to say that before the crop is actually in the ground, the supply of grain is relatively elastic. 
 
 Yield
 
 :   After the crop is planted, there is still considerable uncertainty related to how much the crop will yield; this is largely determined by weather during the growing season.
 
-Carryover Stocks
 
-:    Some of the production from the previous year usually remains. Carryover stocks function as a buffer against current year yield uncertainty. If carryover stocks are high and current year yield is expected to be below trend, the market will respond but in a modest fashion. Essentially carryover stocks can subsitute for new crop production. If carryover stocks are low - resulting from several years of below trend production and strong demand, for example - then below trend yield can cause a volatile rise in prices.  
+# Balance Sheet
 
+Most fundamental analysis relies on maintianing balance sheets of a commodity for a country, region, or the world. The approach is to maintain a careful accounting of how much supply exists and how much of the commodity has been used. Then through various means, one arrives at a price that will ration remaining supplies accross competing uses. 
 
-# The Marketing Year
+## The Marketing Year and Balance Sheet Forecasting Schedule
  
-Fundamental analysis is often organized by marketing year. The marketing year begins with the first month the commodity is harvested and ends with the following year's harvest. 
+Balance sheet analysis is often organized by marketing year. Since production happens, The marketing year begins with the first month the commodity is harvested and ends with the following year's harvest. The table below makes note the month on which marketing years begin for several crops.  
 
 | Crop                    |  Begining of Marketing Year - First Month of Harvest |
 |:------------------------|:-----------------------------------------------------|
@@ -69,29 +73,31 @@ Fundamental analysis is often organized by marketing year. The marketing year be
 
 : Table 1. Beginning of Marketing Year by Crop. (Source [NASS Timetables](http://www.nass.usda.gov/Publications/National_Crop_Progress/))
 
-# Balance Sheet
-
-Balance Sheet definitions and description here. 
-
-
-Forecasting supply and demand for the marketing year begins well before harvest - nearly a year in advance, in fact. 
+Forecasting supply and demand for any given marketing year begins well before harvest - nearly a year in advance, in fact. Table 2 below follows the typical forecasting schedule with the 2016/2017 marketing year. Note that is for the marketing year that begins with harvest in September of 2016. 
 
 | Timeline     | Forecasting Focus                                                                                               |
 |:------------------------|:-----------------------------------------------------------------------------------------------------|
-| Fall 2016    | The first forecasts of supply and use based on *trend forecasts*, *recent history*, *economic relationships*    |
+| Fall 2015    | The first forecasts of supply and use based on , *trend forecasts*, *recent history*, *economic relationships*    |
 | Spring 2016  | Update supply forecasts based on USDA acreage surveys.                                                          |
 | Summer 2016  | Update supply forecasts based on weather and USDA crop and stocks reports                                       |
 | Fall 2016    | Update supply forecasts as yield uncertianty is resolved through harvest reports and USDA production reports    |
-| - Summer 2016| Continue to update supply forecasts based on USDA production revisions, stocks, and use reports.                |
+| - Summer 2016| Continue to update supply forecasts based on USDA production revisions, southern hemisphere production, stocks, and use reports.  |
 
 : Table 2: Forecasting Calendar for 2016/2017 Marketing Year 
 
+> # Southern Hemisphere Production
+> Production of corn, soybeans, and other commodities in the southern hemisphere (most notably in Brazil and Argintina) has grown rapidly over the last ten to fifteen years, and has impacted global commdity markets tremendously. Since southern hemisphere production occurs in the middle of marketing years organized by northern hemisphere harvest, there is an uncertain additional supply that must be forecast and updated to keep an accurate global balance sheet.  
 
 
 
 
 
 
+<!-- 
+Carryover Stocks
+
+:    Some production from the previous year usually remains into the next crop season. Carryover stocks function as a buffer against current year yield uncertainty. For example, if carryover stocks are high and current year yield is expected to be below trend, the market price may fall in response but modestly. However, if carryover stocks are low - resulting from several years of below trend production and strong demand - then an expected yield below trend will likely cause a volatile rise in prices.  
+-->
 
 
 
